# torch-segment-tomogram-boundaries

./: .copier-answers.yml  LICENSE  README.md  optimize_hyperparameters.py  predict_network.py  predict_network_orthogonal.py  pyproject.toml  test_migration_simple.py  train_network.py  tune_hyperparameters.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
examples/: plane_fitting.py  predict_network.py  train_network.py
src/torch_segment_tomogram_boundaries/: __init__.py  config.py  constants.py  fetch.py  losses.py  pl_model.py  predict.py  processing.py  trainer.py
src/torch_segment_tomogram_boundaries/data/: dataloading.py  dataset.py  easymode_fourier.py  transforms.py
src/torch_segment_tomogram_boundaries/utils/: threeD.py  twoD.py
src/torch_tomo_slab/: __init__.py  callbacks.py  config.py  constants.py  fetch.py  losses.py  models.py  pl_model.py  predict.py  processing.py  train.py  trainer.py
src/torch_tomo_slab/data/: dataloading.py  dataset.py  easymode_fourier.py  sampling.py  transforms.py  weight_maps.py
src/torch_tomo_slab/scripts/: p01_mask_preparation.py  p02_data_preparation.py  p03_calculate_data_stats.py  p04_inspect_data.py
src/torch_tomo_slab/utils/: common.py  threeD.py  twoD.py
tests/: conftest.py  test_losses.py  test_prediction.py  test_preprocessing.py  test_torch_tomo_slab.py  test_trainer.py
